--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -16,7 +16,12 @@
 
 <div th:fragment="logo" class="logo-container mb-3 p-3 d-flex justify-content-between">
 	<span class="logo">mudi</span>
-	<span class="mt-3">login</span>
+	<span class="mt-3">
+		<a class="text-light"  href="/login" sec:authorize="!isAuthenticated()"> login</a>
+		<a  onclick="document.querySelector('#form-login').submit()" class="text-light"  href="#"  sec:authorize="isAuthenticated()">logout</a>
+		<form id="form-login"  th:action="@{/logout}" method="post"></form>
+
+	</span>
 </div>	
 
 <div th:fragment="titulo(valor)" class="jumbotron mb-0">
